src/test/deca/syntax/invalid/parser/oracle/elseif_without_expr.deca
{
    if(true){}else if(){print(1);}
}